@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-18T08:20:55Z",
+  "timestamp" : "2022-08-23T16:23:15Z",
   "count_outdated" : 112,
   "uniques_outdated" : 76,
-  "count" : 119,
-  "uniques" : 81,
+  "count" : 115,
+  "uniques" : 78,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 4, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ]
+      "count": 1,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 4 ]
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
