@@ -1,11 +1,11 @@
 {
-  "count": 7,
-  "uniques": 5,
+  "count": 3,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
