@@ -1,3 +1,10 @@
+2022-08-23T16:23:15Z:
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 81 119
+* notice: next accum: outdated-unq outdated-all / unq all: 76 112 / 78 115
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +4 +5 -3 -4 / 1 1
+* notice: removed / changed dates: [] / [2022-08-09]
+
 2022-08-18T08:20:55Z:
 * notice: last 14d: unq all: 5 7
 * notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 80 117
